THRIFT-5118: Fix memory leak when the handler method return a exception Client: c_glib Patch: wangyunjian

Signed-off-by: wangyunjian <wangyunjian@huawei.com>